--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <img src="/logo.png" alt="">
+        <img src="logo.png" alt="">
         <ul>
             <li><a href="#">Home</a></li>
         </ul>
